# plawnekjx-python

./: MANIFEST.in  README.md  meson.build  setup.py
examples/: bytecode.py  channels.py  child_gating.py  crash_reporting.py  detached.py  enumerate_applications.py  enumerate_processes.py  get_frontmost_application.py  portal_client.py  portal_server.py  query_system_parameters.py  rpc.py  session_persist_timeout.py  snapshot.py  unpair.py
examples/cpushark/: CpuShark.py  MainWindowController.py
examples/inject_library/: inject_blob.py  inject_file.py
examples/open_service/: plist.py
examples/open_service/dtx/: deviceinfo.py  opengl.py  processcontrol.py  screenshot.py  sysmontap.py
examples/open_service/xpc/: launchapplication.py  listprocesses.py
examples/web_client/: package-lock.json  package.json
examples/web_client/src/store/: index.ts
examples/web_client/src/store/modules/: plawnekjx.ts
examples/web_client/src/store/plugins/: plawnekjx.ts
plawnekjx/: __init__.py  core.py  meson.build
plawnekjx/_plawnekjx/: extension.c  extension.version  meson.build
tests/: test_core.py  test_rpc.py
